--- a/frontend/assets/scss/elements/button.element.scss
+++ b/frontend/assets/scss/elements/button.element.scss
@@ -83,6 +83,7 @@
     color: $blue;
     text-align: left;
     font-family: $bodyFont;
+    padding: 0px !important;
 
     &:hover {
       background-color: transparent;
